--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,7 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
-Assets/
+*.meta
+Assets/Art/
+Assets/Audio/
+Assets/Demo/
